# noterm

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  flake.nix  release-plz.toml
.github/workflows/: release-plz.yml
examples/clear/: Cargo.toml
examples/clear/src/: main.rs
examples/console/: Cargo.toml  build.rs
examples/console/.cargo/: config.toml
examples/console/src/: main.rs
src/: cursor.rs  events.rs  io.rs  lib.rs  macros.rs  style.rs  terminal.rs
src/events/: parser.rs  stream.rs
src/events/parser/: tests.rs
src/events/stream/: tests.rs
src/io/: blocking.rs
src/macros/: tests.rs
src/macros/ui/: 001-expand-valid-input-no-arg.rs  002-expand-valid-input-with-args.rs  003-fail-expand-invalid-input-missing-fmt.rs  003-fail-expand-invalid-input-missing-fmt.stderr  004-fail-expand-invalid-input-missing-arg.rs  004-fail-expand-invalid-input-missing-arg.stderr
src/style/: attributes.rs  colors.rs
