[package]
name = "noterm"
version = "0.1.1"
edition = "2024"
authors = ["Julien Peeters <inthehack@mountainhacks.org>"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/inthehack/noterm"
repository = "https://github.com/inthehack/noterm"
description = "noterm, a no_std terminal handler."
readme = "README.md"

[features]
std = []

[dependencies]
bitflags = "2.10.0"
defmt = { version = "1.0.1", optional = true }
futures = { version = "0.3.31", default-features = false }
heapless = { version = "0.8.0" }
nom = { version = "8.0.0", default-features = false }
thiserror = { version = "2.0.11", default-features = false }

[dev-dependencies]
rstest = "0.26.1"
speculoos = "0.13.0"
tokio = { version = "1.48.0", features = ["full"] }
